Add usertime sampler

--- a/libs/gum/prof/meson.build
+++ b/libs/gum/prof/meson.build
@@ -6,6 +6,7 @@ gum_prof_headers = [
   'gumprofiler.h',
   'gumprofilereport.h',
   'gumsampler.h',
+  'gumusertimesampler.h',
   'gumwallclocksampler.h',
 ]
 
@@ -26,10 +27,12 @@ endif
 
 if host_os_family == 'windows'
   gum_prof_sources += 'gumbusycyclesampler-windows.c'
+  gum_prof_sources += 'gumusertimesampler-windows.c'
 endif
 
 if host_os_family == 'darwin'
   gum_prof_sources += 'gumbusycyclesampler-darwin.c'
+  gum_prof_sources += 'gumusertimesampler-darwin.c'
   if not host_cpu_is_intel
     gum_prof_sources += 'gumcyclesampler-darwin.c'
   endif
@@ -37,6 +40,7 @@ endif
 
 if host_os_family == 'linux'
   gum_prof_sources += 'gumbusycyclesampler-linux.c'
+  gum_prof_sources += 'gumusertimesampler-linux.c'
   if not host_cpu_is_intel
     gum_prof_sources += 'gumcyclesampler-linux.c'
   endif
@@ -44,6 +48,7 @@ endif
 
 if host_os_family == 'freebsd'
   gum_prof_sources += 'gumbusycyclesampler-freebsd.c'
+  gum_prof_sources += 'gumusertimesampler-freebsd.c'
   if not host_cpu_is_intel
     gum_prof_sources += 'gumcyclesampler-freebsd.c'
   endif
@@ -53,6 +58,7 @@ if host_os_family == 'qnx'
   gum_prof_sources += [
     'gumbusycyclesampler-qnx.c',
     'gumcyclesampler-qnx.c',
+    'gumbusycyclesampler-freebsd.c',
   ]
 endif
 
