--- a/bindings/gumjs/meson.build
+++ b/bindings/gumjs/meson.build
@@ -90,6 +90,7 @@ if v8_dep.found()
     'gumv8codewriter.cpp',
     'gumv8coderelocator.cpp',
     'gumv8cloak.cpp',
+    'gumv8sampler.cpp',
   ]
   if sqlite_dep.found()
     gumjs_sources += 'gumv8database.cpp'
